$Id$

2003-10-16 Tilman Sauerbeck <tilman@code-monkey.de>
        * configure.ac: Added endianess-check, added --enable-debug
          switch
        * src/eplayer.c, src/playlist.c: added playlist_load_any(),
          eplayer will now load files and directories as well
        * code cleanup
        * configure.ac, Makefile.am etc: implemented install and
          dist targets

2003-10-15 Tilman Sauerbeck <tilman@code-monkey.de>
        * data/eplayer.edc: Added basic playlist support,
          time_text shows elapsed time or time left
        * src/Makefile.am: Now linking to libesmart, included playlist.c
          and playlist.h
        * src/playlist.c,h: Added playlist object
        * src/eplayer.c, interface.c: Added basic playlist support
        * autogen.sh, configure.ac, src/Makefile.am:
          Updated build system